--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,9 @@
 kitpages_shop_cms:
-    resource: "@KitpagesShopCmsBundle/Resources/config/routing.xml"
+    resource: "@KitpagesShopCmsBundle/Resources/config/routing.yml"
+    prefix:   /
+
+kitpages_shop:
+    resource: "@KitpagesShopBundle/Resources/config/routing.xml"
     prefix:   /
 
 app_kit_site:
@@ -19,6 +23,6 @@ app_kit_user:
 
 kitpages_cms_page_view_lang:
     pattern:  /{lang}/cms/{id}/{urlTitle}
-    defaults: { _controller: KitpagesCmsBundle:Page:view, lang: en }
+    defaults: { _controller: KitpagesCmsBundle:Page:view, lang: fr }
     requirements:
         id: \d+
