--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,8 +24,8 @@ security:
         - { path: /.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
 
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_USER, ROLE_CMS_ADMIN]
-        ROLE_SUPERADMIN: ROLE_ADMIN
+        ROLE_USER: ROLE_SHOP_USER
+        ROLE_ADMIN: [ ROLE_USER, ROLE_SHOP_ADMIN, ROLE_CMS_ADMIN]
     encoders:
         "App\UserBundle\Entity\User": sha512
         "FOS\UserBundle\Model\UserInterface": sha512
